# supermusr-trace-event-viewer

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: build_graph.rs  cache.rs  cli_structs.rs  data.rs  engine.rs  main.rs  message.rs  message_handling.rs  output.rs  output_to_file.rs
src/app/: app.rs  display.rs  mod.rs  results.rs  setup.rs
src/finder/: engine.rs  find.rs  find_by_date.rs  mod.rs  searcher.rs  task.rs
src/finder/task/: by_timestamp.rs  capture.rs  from_end.rs  mod.rs
src/graphics/: bounds.rs  build_graph.rs  mod.rs  svg.rs
src/messages/: cache.rs  mod.rs
src/tui/: app.rs  builder.rs  channels.rs  controls.rs  graph.rs  listbox.rs  mod.rs  results.rs  setup.rs  style.rs  textbox.rs  tui_component.rs
src/tui/components/: datebox.rs  mod.rs  textbox.rs
src/tui/tabs/: intro.rs  mod.rs  search.rs
src/tui/traits/: mod.rs
src/tui/widgets/: channels.rs  editbox.rs  graph.rs  listbox.rs  mod.rs  statusbar.rs  textbox.rs
src/tui/widgets/graph/: graph.rs  mod.rs  properties.rs
