[workspace]

[package]
name = "supermusr-trace-event-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
assert_approx_eq = "1.1.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive", "env"] }
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
flatbuffers = "25.2.10"
plotters = { version = "0.3.7", default-features = false, features = ["plotters-svg", "svg_backend", "bitmap_encoder", "all_series", "bitmap_backend"] }
ratatui = "0.29.0"
rdkafka = { version = "0.37.0", features = ["cmake-build", "ssl", "gssapi", "sasl"] }
strum = { version = "0.27.1", features = ["derive"] }
supermusr-common = { path = "./../supermusr-data-pipeline/common" }
supermusr-streaming-types = { path = "./../supermusr-data-pipeline/streaming-types" }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "sync"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "env-filter"] }
tui-input = { version = "0.12.1", features = ["crossterm"], default-features = false }
